list section added

--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -92,9 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
     "# chek type of bool variable\n",
     "print( type( True) )\n",
@@ -103,9 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# comparison operators evaluate to bool\n",
     "print( 3 > 2  )\n",
@@ -114,9 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# bools are int under the hood: True = 1, and False = 0\n",
     "# But to make your programs readable, always use True and False\n",
@@ -148,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -273,10 +302,8 @@
    "metadata": {},
    "source": [
     "***\n",
-    "\n",
     "# Notes pending on\n",
-    "- strings\n",
-    "***"
+    "- strings"
    ]
   },
   {
@@ -310,9 +337,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 0: A\n",
+      "index -1: E\n",
+      "substring [0:-1]: ABCD\n",
+      "substring last three characters: CDE\n",
+      "end index < start index & direction LTR : \n",
+      "end index < start index ^ direction RTL: CB\n",
+      "alternate characters LTR: ACE\n",
+      "alternate char.s RTL: ECA\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'ABCDE'\n",
     "# fetch element at a specific index\n",
@@ -354,9 +396,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# create a list \n",
     "l = [1, 2, 3, 4, 5]\n",
@@ -366,9 +417,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[1, True, 'hello', 12.3]\n"
+     ]
+    }
+   ],
    "source": [
     "# a list can contain any kind of elements\n",
     "l = [1, True, 'hello', 12.3]\n",
@@ -378,9 +438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# access list elements using splice notation\n",
     "l = [1, 2, 3, 4, 5]\n",
@@ -390,9 +458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "after appending 5: [1, 2, 3, 4, 5]\n",
+      "[1, 2, 3]\n",
+      "after extending with [4,5]: [1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# get useful list methods using : dir( list )\n",
     "# append, clear, copy, count, extend, index, insert, \n",
@@ -413,58 +492,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before clearing: [1, 2, 3]\n",
+      "after clearing: []\n"
+     ]
+    }
+   ],
    "source": [
+    "# clearing all elements in a list\n",
     "l = [1,2,3]\n",
-    "print( l )\n",
+    "print( f'before clearing: {l}' )\n",
     "l.clear()\n",
-    "print(l)"
+    "print( f'after clearing: {l}' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of 1s: 1\n",
+      "number of 3s: 3\n",
+      "number of -1000s: 0\n"
+     ]
+    }
+   ],
    "source": [
+    "# count number of occurances on a particular element\n",
     "l = [1,2,2,3,3,3]\n",
-    "print( l.count(1))\n",
-    "print( l.count(3))\n",
-    "print( l.count( -100 ))"
+    "print( f'number of 1s: {l.count(1)}' )\n",
+    "print( f'number of 3s: {l.count(3)}' )\n",
+    "# since -100 does not exist in the list, it return 0\n",
+    "print( f'number of -1000s: {l.count( -100 )}' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original list: [1, 2, 3]\n",
+      "reversed list(original list does not change): [3, 2, 1]\n",
+      "original list(one more time): [1, 2, 3]\n",
+      "what does reverse return? None\n",
+      "in place revered list: [3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
+    "# Reversal of a list\n",
     "l = [1, 2, 3]\n",
-    "print( l[::-1] )\n",
-    "print( l.reverse() )\n",
-    "print( l )"
+    "print( f'original list: {l}' )\n",
+    "print( f'reversed list(original list does not change): {l[::-1]}' )\n",
+    "print( f'original list(one more time): {l}' )\n",
+    "# reverse modifies the list in-place, does not return anything\n",
+    "print( f'what does reverse return? {l.reverse()}' )\n",
+    "print( f'in place revered list: {l}' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# more reversal\n",
     "l = [1,2,3]\n",
+    "# same list as l\n",
     "m = [1,2,3]\n",
     "l.reverse()\n",
-    "\n",
     "l == m[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 exists: True\n",
+      "9 exists: False\n",
+      "9 does not exist: True\n",
+      "size: 3\n",
+      "empty list size: 0\n",
+      "sum of the list: 6\n"
+     ]
+    }
+   ],
    "source": [
     "# built in methods\n",
     "# in, not in, len, sum\n",
@@ -483,37 +625,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original list: [1, 2, 3]\n",
+      "after replacing 3 with 9: [1, 2, 9]\n"
+     ]
+    }
+   ],
    "source": [
+    "# modify list : one element at a time\n",
     "l = [1, 2, 3]\n",
-    "print (l)\n",
+    "print ( f'original list: {l}')\n",
+    "# replace 3 with 9\n",
     "l[-1] = 9\n",
-    "print(l)"
+    "print( f'after replacing 3 with 9: {l}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original list: [1, 2, 3, 4]\n",
+      "first two numbers replaced with 0s: [0, 0, 3, 4]\n",
+      "last two numbers replaced with 4 1s: [0, 0, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
+    "# replace several elements at once\n",
     "l = [1, 2, 3, 4]\n",
-    "#l[0:2] = [3,4,5]\n",
-    "#l[0:-10] = [1,2, 3, 4, 5, 6, 7]\n",
-    "l[-10:0] = [1,2, 3, 4, 5, 6, 7]\n",
-    "print(l)\n",
-    "print( len(l) )\n"
+    "print( f'original list: {l}' )\n",
+    "# replace first two elements with 0,0\n",
+    "l[0:2] = [0,0] # l[0:2] = (0,0) also works!\n",
+    "print( f'first two numbers replaced with 0s: {l}' )\n",
+    "# replace last two numbers 3,4 with four numbers 1,1,1,1\n",
+    "l[2:] = [1,1,1,1]\n",
+    "print( f'last two numbers replaced with 4 1s: {l}' )\n",
+    "\n",
+    "# Strange scenarios - need to understand\n",
+    "# l = [1, 2, 3, 4]\n",
+    "# l[0:2] = [3,4,5]\n",
+    "# l[0:-10] = [1,2, 3, 4, 5, 6, 7]\n",
+    "# l[-10:0] = [1,2, 3, 4, 5, 6, 7]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original list: [1, 2, 3]\n",
+      "last element deleted is: 3\n",
+      "list after deleting last element: [1, 2]\n",
+      "0th element deleted is: 1\n",
+      "2\n",
+      "[]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-73-0e3572cec50f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
    "source": [
+    "# remove element from a position\n",
     "l = [1,2,3]\n",
+    "print( f'original list: {l}')\n",
+    "# pop() removes the last element from the list\n",
+    "# It also return the element deleted\n",
+    "print( f'last element deleted is: {l.pop()}' )\n",
+    "print( f'list after deleting last element: {l}')\n",
+    "# pop( index ) removes element at specific index\n",
+    "print( f'0th element deleted is: {l.pop(0)}')\n",
+    "print( f'list after deleteing')\n",
     "print( l.pop() )\n",
     "print( l )\n",
     "l[2] = 3\n",
