--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -692,19 +692,7 @@
       "last element deleted is: 3\n",
       "list after deleting last element: [1, 2]\n",
       "0th element deleted is: 1\n",
-      "2\n",
-      "[]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-73-0e3572cec50f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+      "list after deleting forst element: [2]\n"
      ]
     }
    ],
@@ -718,31 +706,79 @@
     "print( f'list after deleting last element: {l}')\n",
     "# pop( index ) removes element at specific index\n",
     "print( f'0th element deleted is: {l.pop(0)}')\n",
-    "print( f'list after deleteing')\n",
-    "print( l.pop() )\n",
-    "print( l )\n",
-    "l[2] = 3\n",
-    "print( l )"
+    "print( f'list after deleting forst element: {l}')\n",
+    "# pop( index ) throws an error if 0 < index <= list-size\n",
+    "# following line generates an exception\n",
+    "# print( l.pop(1) )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*** \n",
+    "## Tuples\n",
+    "\n",
+    "Tuples are just like lists, but once created can't be modified. Use normal braces - **(** and __)__ - to create a tuple."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type: <class 'tuple'>\n",
+      "tuple: (1, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "t = (1,2, 3)\n",
-    "print( type(t) )\n",
-    "print( t)"
+    "# type of a tuple varaible\n",
+    "t = (1,2,3)\n",
+    "print( f'type: {type(t)}')\n",
+    "print( f'tuple: {t}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t[::-1]"
+    "# tuples are immutable \n",
+    "t = (1, 2, 3)\n",
+    "#following code throws an expection\n",
+    "# t[0] = 100    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-83-a0427f5c235c>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-83-a0427f5c235c>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    t = (,)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# single element tuples\n",
+    "t = (1,) # note the trailing comma\n",
+    "print( f'type: { type(t) }' )\n",
+    "# what if comma is not added?\n",
+    "t = (1)\n",
+    "print( f'type: { type(t) }')\n",
+    "print( f'data: {t}')\n",
+    "# zero element tuple ? not sure if they are supported\n",
+    "tuple()"
    ]
   },
   {
