sets section added

--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -757,15 +757,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-83-a0427f5c235c>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-83-a0427f5c235c>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    t = (,)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type: <class 'tuple'>\n",
+      "type: <class 'int'>\n",
+      "data: 1\n",
+      "empty tuple type: <class 'tuple'>\n",
+      "empty tuple data: ()\n"
      ]
     }
    ],
@@ -777,46 +780,91 @@
     "t = (1)\n",
     "print( f'type: { type(t) }')\n",
     "print( f'data: {t}')\n",
-    "# zero element tuple ? not sure if they are supported\n",
-    "tuple()"
+    "# zero element tuple - why do you need it?\n",
+    "empty_tuple = tuple([])\n",
+    "print( f'empty tuple type: { type(empty_tuple) }')\n",
+    "print( f'empty tuple data: {empty_tuple}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*** \n",
+    "## Sets\n",
+    "\n",
+    "Sets are **unordered** sequences, they work just like lists. However, since they are unordered elements can't be accessed by a position. Simply there is no notion of position(index)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set type: <class 'set'>\n",
+      "set data: {1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "t[0] = 9"
+    "# create sets\n",
+    "s = {1, 2, 3}\n",
+    "print( f'set type: {type(s)}')\n",
+    "print( f'set data: {s}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set data: {1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "print( type( (1) ) )\n",
-    "print( type( ('abc') ) )"
+    "# set does not allow duplicate elements\n",
+    "# note: 3 is repeated twice in the set assignment\n",
+    "s = {1, 2, 3, 3} \n",
+    "print( f'set data: {s}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set union type: <class 'set'>\n",
+      "set union data: {1, 2, 3, 4, 5}\n",
+      "<class 'set'>\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "# single element tuples\n",
-    "print( type( (1,) ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sets\n",
+    "# set support union, intersection, difference etc operations\n",
+    "set_one = {1, 2, 3}\n",
+    "set_two = {3, 4, 5}\n",
+    "# union\n",
+    "set_union = set_one.union( set_two )\n",
+    "print( f'set union type: {type(set_union)}')\n",
+    "print( f'set union data: {set_union}')\n",
+    "# intersection\n",
+    "set_intersection = set_one.intersection( set_two )\n",
+    "print( f'set intersection type: {type(se)}')\n",
+    "\n",
     "s = {1, 2, 3}\n",
     "print( type(s) )\n",
     "print( s)"
