membership section complete

--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "True"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -848,8 +848,8 @@
      "text": [
       "set union type: <class 'set'>\n",
       "set union data: {1, 2, 3, 4, 5}\n",
-      "<class 'set'>\n",
-      "{1, 2, 3}\n"
+      "set intersection type: <class 'set'>\n",
+      "set intersection data: {3}\n"
      ]
     }
    ],
@@ -863,47 +863,275 @@
     "print( f'set union data: {set_union}')\n",
     "# intersection\n",
     "set_intersection = set_one.intersection( set_two )\n",
-    "print( f'set intersection type: {type(se)}')\n",
+    "print( f'set intersection type: {type(set_intersection)}')\n",
+    "print( f'set intersection data: {set_intersection}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Dictionaries\n",
     "\n",
+    "Dictionary(**dict**) supports **key**, __value__ data.\n",
+    "- key can be anything which can be **hashed**. for example **list, set, dict** can't be a key!\n",
+    "    - Rule of thumb: only immutable data is accepted as a key\n",
+    "- value can be anything"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of dict: <class 'dict'>\n",
+      "data: {'BLR': 'KA', 'MAS': 'TN', 'BOM': 'MH'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create dictionary\n",
+    "states = { 'BLR': 'KA', 'MAS': 'TN', 'BOM': 'MH' }\n",
+    "print( f'type of dict: {type( states )}')\n",
+    "print( f'data: {states}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict with None key: {'BLR': 'KA', None: 'MH'}\n",
+      "dict with None key: {'BLR': 'KA', 'BOM': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# restriction on dict keys - all keys should be hashable\n",
+    "states = { 'BLR': 'KA', None: 'MH' }\n",
+    "print( f'dict with None key: {states}' )\n",
+    "# dict with None value\n",
+    "states = { 'BLR': 'KA', 'BOM': None }\n",
+    "print( f'dict with None key: {states}' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# restriction on keys - unhashable keys not allowed\n",
+    "dict_with_tuple_key = { (1,2,3): 'hello'}\n",
+    "# all the following lines throw Exception\n",
+    "# dict_with_list_key = { [1,2,3]: 'hello'}\n",
+    "# dict_with_set_key = { {1,2,3}: 'hello'}\n",
+    "# dict_with_dict_key = { {1: True, 2: True}: 'hello'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict data: {'city': 'BLR'}\n",
+      "dict data(after adding new key,vale): {'city': 'BLR', 'state': 'TN'}\n",
+      "dict data(after overwrting a value): {'city': 'BLR', 'state': 'KA'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adding elements to a dict\n",
+    "my_dict = { 'city': 'BLR'}\n",
+    "print( f'dict data: {my_dict}')\n",
+    "# add a new key, value pair to dict\n",
+    "my_dict['state'] = 'TN'\n",
+    "print( f'dict data(after adding new key,vale): {my_dict}')\n",
+    "# replace value of an existing key\n",
+    "my_dict['state'] = 'KA'\n",
+    "print( f'dict data(after overwrting a value): {my_dict}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keys type: <class 'dict_keys'>\n",
+      "keys : dict_keys(['BLR', 'MAS', 'BOM'])\n",
+      "values type: <class 'dict_values'>\n",
+      "values : dict_values(['KA', 'TN', 'MH'])\n",
+      "items type: <class 'dict_items'>\n",
+      "items : dict_items([('BLR', 'KA'), ('MAS', 'TN'), ('BOM', 'MH')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieve all keys\n",
+    "city_and_state = { 'BLR': 'KA', 'MAS': 'TN', 'BOM': 'MH' }\n",
+    "cities = city_and_state.keys()\n",
+    "print( f'keys type: {type(cities)}')\n",
+    "print( f'keys : {cities}')\n",
+    "\n",
+    "# Retrieve all values\n",
+    "states = city_and_state.values()\n",
+    "print( f'values type: {type(states)}')\n",
+    "print( f'values : {states}')\n",
+    "\n",
+    "# retrieve items (item (Key, Value) )\n",
+    "items = city_and_state.items()\n",
+    "print( f'items type: {type(items)}')\n",
+    "print( f'items : {items}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Membership queries \n",
+    "\n",
+    "All sequences (lists, tuples, sets) and dict supports membership queries. However, membership queries on lists and tuples are extremely slow. Use **set** or **dict** to process membership queries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 exists in [1, 2, 3]: True\n",
+      "4 exists in [1, 2, 3]: False\n",
+      "1 exists in (1, 2, 3): True\n",
+      "4 exists in (1, 2, 3): False\n",
+      "1 exists in s: True\n",
+      "4 exists in s: False\n",
+      "a exists in dict: True\n",
+      "x exists in dict: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in, not in are used for membership queries\n",
+    "# list membership\n",
+    "print( f'1 exists in [1, 2, 3]: {1 in [1, 2, 3]}')\n",
+    "print( f'4 exists in [1, 2, 3]: {4 in [1, 2, 3]}')\n",
+    "# tuple membership\n",
+    "print( f'1 exists in (1, 2, 3): {1 in (1, 2, 3)}')\n",
+    "print( f'4 exists in (1, 2, 3): {4 in (1, 2, 3)}')\n",
+    "# set membership\n",
     "s = {1, 2, 3}\n",
-    "print( type(s) )\n",
-    "print( s)"
+    "one_in_set = 1 in s\n",
+    "four_in_set = 4 in s\n",
+    "print( f'1 exists in s: {one_in_set}')\n",
+    "print( f'4 exists in s: {four_in_set}')\n",
+    "# dictionary membership (membership of keys)\n",
+    "my_dict = { 'a': 1, 'b': 2, 'c': 3}\n",
+    "a_in_dict = 'a' in my_dict\n",
+    "x_in_dict = 'x' in my_dict\n",
+    "print( f'a exists in dict: {a_in_dict}' )\n",
+    "print( f'x exists in dict: {x_in_dict}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list in: True\n",
+      "CPU times: user 309 µs, sys: 1.23 ms, total: 1.54 ms\n",
+      "Wall time: 2.11 ms\n",
+      "tuple in: True\n",
+      "CPU times: user 82 µs, sys: 44 µs, total: 126 µs\n",
+      "Wall time: 109 µs\n",
+      "set in: True\n",
+      "CPU times: user 78 µs, sys: 50 µs, total: 128 µs\n",
+      "Wall time: 117 µs\n",
+      "dictionary in: True\n",
+      "CPU times: user 32 µs, sys: 4 µs, total: 36 µs\n",
+      "Wall time: 38.9 µs\n"
+     ]
+    }
+   ],
    "source": [
-    "print( f'1 in s: {1 in s}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# union\n",
-    "s1 = {1,2,3}\n",
-    "s2 = {3,4,5}\n",
-    "print( f'union: {s1.union(s2)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dictionaries\n",
+    "# Be careful on what data structure to use for memebership queries\n",
     "l = list( range(0, 100000000) )\n",
     "t = tuple( range(0, 100000000) )\n",
     "s = set( range(0, 100000000) )\n",
+    "d = {i: True for i in l }\n",
     "%time print( f'list in: {5400 in l}')\n",
     "%time print( f'tuple in: {5400 in t}')\n",
-    "%time print( f'set in: {5400 in s}')"
+    "%time print( f'set in: {5400 in s}')\n",
+    "%time print( f'dictionary in: {5400 in d}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*** \n",
+    "## Nested Data structures\n",
+    "\n",
+    "Data structures lists, tuples, sets, and dictionaries can be nested."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list of lists: [[1, 3, 5, 7, 9], [2, 4, 6, 8, 10]]\n",
+      "list of tuples: [(1, 3, 5, 7, 9), (2, 4, 6, 8, 10)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list of lists\n",
+    "ll = [ [1,3,5,7,9], [2,4,6,8,10] ]\n",
+    "print( f'list of lists: {ll}')\n",
+    "# list of tuple\n",
+    "lt = [ (1,3,5,7,9), (2,4,6,8,10) ]\n",
+    "print( f'list of tuples: {lt}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "### Read about\n",
+    "- byte\n",
+    "- byte array\n",
+    "- frozen sets"
    ]
   },
   {
