operators and builtin objects

--- a/lessons/Ch03 - Data Types.ipynb
+++ b/lessons/Ch03 - Data Types.ipynb
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1120,6 +1120,25 @@
     "# list of tuple\n",
     "lt = [ (1,3,5,7,9), (2,4,6,8,10) ]\n",
     "print( f'list of tuples: {lt}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll = [ [1,3,5,7,9], {2: None, 4: ['a', 'b', 'c' ]} ]\n",
+    "\n",
+    "print( ll[1][4] )"
    ]
   },
   {
